force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/SVMXA360__SM_TA_AssetTechnicalAttribute__c.object-meta.xml
<CustomObject>
    <description>This object stores current technical attribute values for an Asset.</description>
    <label>Asset Technical Attribute</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Asset Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Technical Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>