force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <description>Asset Id of the record on which attributes are being captured.</description>
    <inlineHelpText>Asset Id of the record on which attributes are being captured.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Technical Attributes</relationshipLabel>
    <relationshipName>AssetTechnicalAttributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>