force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to technical attribute.</description>
    <inlineHelpText>Lookup to technical attribute.</inlineHelpText>
    <label>Attribute</label>
    <referenceTo>SVMXA360__SM_TA_TechnicalAttribute__c</referenceTo>
    <relationshipLabel>Asset Technical Attributes</relationshipLabel>
    <relationshipName>AssetTechnicalAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>