force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean representation of the attribute value (when Data Type = Boolean)</description>
    <inlineHelpText>Boolean representation of the attribute value (when Data Type = Boolean)</inlineHelpText>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>