force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__CapturedBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CapturedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who captured the attribute</description>
    <inlineHelpText>User who captured the attribute</inlineHelpText>
    <label>Captured By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssetTechnicalAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>