force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__CapturedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CapturedOn__c</fullName>
    <description>Date and time when the attribute was captured</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and time when the attribute was captured</inlineHelpText>
    <label>Captured On</label>
    <type>DateTime</type>
</CustomField>