force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__LastOccurrence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LastOccurrence__c</fullName>
    <description>Holds the list of attribute’s value and its occurrence time in Json format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Occurrence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>