force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousCapturedBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousCapturedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who captured the attribute previously</description>
    <inlineHelpText>User who captured the attribute previously</inlineHelpText>
    <label>Previous Captured By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Technical_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>