force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousCapturedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousCapturedOn__c</fullName>
    <description>Date and time when the attribute was previously captured</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and time when the attribute was previously captured</inlineHelpText>
    <label>Previous Captured On</label>
    <type>DateTime</type>
</CustomField>