force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousDatetimeValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousDatetimeValue__c</fullName>
    <description>Datetime representation of the previous attribute value (when Data Type = Datetime)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Datetime representation of the previous attribute value (when Data Type = Datetime)</inlineHelpText>
    <label>Previous Datetime Value</label>
    <type>DateTime</type>
</CustomField>