force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousDateValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousDateValue__c</fullName>
    <description>Date representation of the previous attribute value (when Data Type = Date)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date representation of the previous attribute value (when Data Type = Date)</inlineHelpText>
    <label>Previous Date Value</label>
    <type>Date</type>
</CustomField>