force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousNumberValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousNumberValue__c</fullName>
    <description>Number representation of the previous attribute value (when Data Type = Number)</description>
    <inlineHelpText>Number representation of the previous attribute value (when Data Type = Number)</inlineHelpText>
    <label>Previous Number Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>