force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreviousValue__c</fullName>
    <description>Holds the previous value of the attribute stored as a text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds the previous value of the attribute stored as a text</inlineHelpText>
    <label>Previous Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>