force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__Source__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Source__c</fullName>
    <description>Attributes were captured from one of these connections: Web, Mobile, External system.</description>
    <inlineHelpText>Attributes were captured from one of these connections: Web, Mobile, External system.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>External System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>