force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>Salesforce Id of the Source record from where the Asset’s technical attributes are captured</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Salesforce Id of the Source record from where the Asset’s technical attributes are captured</inlineHelpText>
    <label>Source Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>