force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__TemplateItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TemplateItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template Item for which the value is being recorded</description>
    <inlineHelpText>Template Item for which the value is being recorded</inlineHelpText>
    <label>Template Item</label>
    <referenceTo>SVMXA360__SM_TA_TemplateItem__c</referenceTo>
    <relationshipLabel>Asset Technical Attributes</relationshipLabel>
    <relationshipName>AssetTechnicalAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>