force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__TimeOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TimeOfOccurrence__c</fullName>
    <description>Actual timestamp when the attribute displayed the value. When this info is not available, Captured On info will be populated. This field holds the time stamp of latest occurrence.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Time of Occurrence</label>
    <type>DateTime</type>
</CustomField>