force-app/main/default/objects/SVMXA360__SM_TA_AssetTechnicalAttribute__c/fields/SVMXA360__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work order from where the Asset’s technical attributes are captured</description>
    <inlineHelpText>Work order from where the Asset’s technical attributes are captured</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Asset Technical Attributes</relationshipLabel>
    <relationshipName>AssetTechnicalAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>